--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-site-url: http://127.0.0.1
+site-url: 47.115.118.34
 server:
   port: 80
   tomcat:
@@ -18,7 +18,7 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/jieyue?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://${site-url}:3306/jieyue?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
   mvc:
     static-path-pattern: /*/**
   mail:
@@ -44,7 +44,7 @@ spring:
   redis:
     database: 0
     port: 6379
-    host: 127.0.0.1
+    host: ${site-url}
 mybatis:
   mapper-locations: classpath:/static/mapping/*Mapping.xml
   type-aliases-package: com.example.jieyue.common.entity
