查找功能技术实现由es的模糊查找替换原先的mysql模糊查找

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
             <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <version>2.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
