群发消息：消息队列功能的实现由rabbitMQ替换原本的redis队列

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,17 @@ spring:
       cluster-name: elasticsearch
       repositories:
         enabled: true
+  rabbitmq:
+    addresses: ${site-url}:5672
+    username: guest
+    password: guest
+    virtual-host: /
+    connection-timeout: 15000
+    listener:
+      simple:
+        concurrency: 5
+        max-concurrency: 10
+        acknowledge-mode: manual
   mvc:
     static-path-pattern: /*/**
   mail:
