--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
             <version>2.5.2</version>
         </dependency>
+        <!-- rabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
