部署方式由war转为jar包；使用gitee图床作为图片服务

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ server:
   error:
     include-exception: true
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 100MB
   jmx:
     enabled: false
   application:
